--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,43 +1,5 @@
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
-body {
-  margin: 0;
-  padding: 1em;
-  font-family: sans-serif;
-  background: #f0f0f0;
-  height: 100%;
-  width:100%;
-}
-
-svg {
-    
-}
-svg g {
-  fill: #3F51B5;
-  fill-opacity: 0.6;
-}
-svg g:hover {
-  fill-opacity: 1;
-}
-svg g:hover text {
-  fill-opacity: 1;
-}
-
-svg g polygon {
-  stroke: #3F51B5;
-  stroke-width: 0.5;
-  transition: fill-opacity .2s;
-}
-svg g text {
-  font-size: 0.3em;
-  fill: #FFFFFF;
-  fill-opacity: 0.4;
-  transition: fill-opacity .2s;
-}
-svg path {
-  fill: none;
-  stroke: hsl(60, 20%, 70%);
-  stroke-width: 0.4em;
-  stroke-opacity: 0.3;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-}
+@import "hex"
