--- a/resources/views/auth/register.edge
+++ b/resources/views/auth/register.edge
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>RPG</title>
-  {{ style('app') }}
-  <link rel="icon" href="spiked-dragon-head.png" type="image/x-icon">
-</head>
-<body class="bg-gray-300" >
+@layout('layout.master')
+
+@section("content")
+
     <div class="flex flex-col my-8 py-8">
         <h1 class="text-4xl px-4 antialiased"> Seja bem vindo </h1>
         <div class="flex w-1/3 rounded-xl justify-center text-white mx-auto py-8 bg-gray-700 border-4 border-red-700">
@@ -17,10 +12,14 @@
                 <input id="username" name="username" autocomplete="username" class="rounded text-black border-2 my-2 py-2 bg-blue-50" type="text"></input><br/>
                 <label for="password" >Password</label><br/>
                 <input id="password" name="password" autocomplete="current-password" class="rounded text-black border-2 my-2 py-2 bg-blue-50" type="password"></input><br/>
-                <input class="rounded bg-black text-white hover:bg-red-900 hover:text-white py-2 px-3" type="submit"></input>
+                <input class="rounded bg-black text-white hover:bg-red-900 hover:text-white py-2 px-3" type="submit"></input><br/>
                 {{csrfField(csrfToken)}}
+                <p class="text-sm">Already have an account?</p>
+                <a href="{{route('loginPage')}}">
+                    <input class="rounded bg-black text-white hover:bg-red-900 hover:text-white py-2 px-3" type="button" value="Log in"></input>
+                </a>
             </form>
         </div>
     </div>
-</body>
-</html>
+
+@endsection
