--- a/resources/views/game/index.edge
+++ b/resources/views/game/index.edge
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>RPG</title>
-  {{ style('app') }}
-  <link rel="icon" href="spiked-dragon-head.png" type="image/x-icon">
-</head>
-<body >
+@layout('layout.master')
+
+@section('content')
 
     <div id='root'></div>
 
-</body>
-</html>
-{{ script('app') }}
+    {{ script('app') }}
+@endsection
