--- a/resources/views/layout/header.edge
+++ b/resources/views/layout/header.edge
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>RPG</title>
-  {{ style('app') }}
-  <link rel="icon" href="spiked-dragon-head.png" type="image/x-icon">
-</head>
-<body >
 
-    <div id='root'></div>
-
-</body>
-</html>
-{{ script('app') }}
+@section('header')
+    <div class='flex bg-gray-700 place-content-between text-white w-screen h-16' id='header'>
+        <div class="inline px-4 py-4"><img class="h-12 w-12" src="spiked-dragon-head.png"> </img></div>
+        <div class="inline px-4 py-4">
+            @loggedIn
+            <span> hello {{ auth.user.username }}</span>               
+            <a href={{route('logout')}}>
+                <button class="bg-blue-500 hover:bg-red-500 py-2 px-3">Logout</button>
+            </a>
+            @endloggedIn
+        </div>
+    </div>
+@endsection
