save map and roles added

--- a/resources/views/game/index.edge
+++ b/resources/views/game/index.edge
@@ -1,8 +1,6 @@
 @layout('layout.master')
 
 @section('content')
-
-    <div id='root'></div>
-
+    <div id='root' data-user="{{auth.user.id}}" class='h-full w-screen'></div>
     {{ script('app') }}
 @endsection
