--- a/resources/views/layout/master.edge
+++ b/resources/views/layout/master.edge
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8 " name="viewport" content="width=device-width, initial-scale=1" />
   <title>RPG</title>
   {{ style('app') }}
   <link rel="icon" href="spiked-dragon-head.png" type="image/x-icon">
 </head>
-<body class="bg-gray-300" >
+<body class="container bg-gray-400" >
     @include('layout.header')
-    <div>
-        @!section('content')
-    </div>
+
+    @!section('content')
+
 </body>
 </html>
