--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,4 +2,6 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-@import "hex"
+@import "./buttons.scss";
+
+@import "./hex.scss";
