--- a/resources/views/game/createMap.edge
+++ b/resources/views/game/createMap.edge
@@ -1,6 +1,6 @@
 @layout('layout.master')
 
 @section('content')
-    <div id='root' data-user="{{auth.user.id}}" class='h-full w-screen'></div>
+    <div id='createMap' class='h-full w-screen'></div>
     {{ script('app') }}
 @endsection
