--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -6,8 +6,12 @@
             <a class="flex flex-col" href="{{route('createMap')}}">
                 <button class='btn-primary bg-gray-500 hover:bg-gray-700' > create map</button>
             </a>
-            <button class='btn-primary bg-gray-500 hover:bg-gray-700' > create tile</button>
-            <button class='btn-primary bg-gray-500 hover:bg-gray-700' >create character</button>
+            <a class="flex flex-col" href="{{route('createTile')}}">
+                <button class='btn-primary bg-gray-500 hover:bg-gray-700' > create tile</button>
+            </a>
+            <a class="flex flex-col" href="{{route('createMap')}}">
+                <button class='btn-primary bg-gray-500 hover:bg-gray-700' > create character</button>
+            </a>
         </div>
 
     </div>
