create stat system added

--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -12,6 +12,9 @@
             <a class="flex flex-col" href="{{route('createMap')}}">
                 <button class='btn-primary bg-gray-500 hover:bg-gray-700' > create character</button>
             </a>
+            <a class="flex flex-col" href="{{route('createStatSystem')}}">
+                <button class='btn-primary bg-gray-500 hover:bg-gray-700' > create system</button>
+            </a>
             <a class="flex flex-col" href="{{route('uploadImage')}}">
                 <button class='btn-primary bg-gray-500 hover:bg-gray-700' > upload image</button>
             </a>
