changed syntax of function declarations and fixed bug with image load

--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -18,6 +18,9 @@
             <a class="flex flex-col" href="{{route('uploadImage')}}">
                 <button class='btn-primary bg-gray-500 hover:bg-gray-700' > upload image</button>
             </a>
+            <a class="flex flex-col" href="{{route('createCharacter')}}">
+                <button class='btn-primary bg-gray-500 hover:bg-gray-700' > create character</button>
+            </a>
         </div>
 
     </div>
