--- a/resources/views/layout/master.edge
+++ b/resources/views/layout/master.edge
@@ -6,10 +6,14 @@
   {{ style('app') }}
   <link rel="icon" href="spiked-dragon-head.png" type="image/x-icon">
 </head>
-<body class="container bg-gray-400" >
-    @include('layout.header')
+<body class="container h-screen w-screen bg-gray-400" >
+    <div class="w-screen">
+        @include('layout.header')
+    </div>
+    <div class="w-screen">
+        @!section('content')
+    </div>
 
-    @!section('content')
 
 </body>
 </html>
