project beautification in progress

--- a/resources/assets/sass/buttons.scss
+++ b/resources/assets/sass/buttons.scss
@@ -4,5 +4,5 @@
 }
 
 .btn-primary {
-    @apply  btn bg-blue-500 border-2 border-red-500 hover:bg-blue-700 text-white text-sm;
+    @apply  btn bg-gray-500 border-2 border-black hover:bg-gray-900 text-white text-sm;
 }
