--- a/resources/views/layout/header.edge
+++ b/resources/views/layout/header.edge
@@ -1,6 +1,6 @@
 
 @section('header')
-    <div id='head' class='flex bg-gray-700 place-content-between text-white w-screen ' id='header'>
+    <div id='head' class='flex bg-gray-700 place-content-between text-white w-screen ' style="background-image: url('/black-marble.jpg')" id='header'>
         <div class="inline px-4 py-4">
             <a href={{route('/')}}>
                 <img class="h-12 w-12" src="spiked-dragon-head.png"> </img>
