--- a/resources/assets/sass/form.scss
+++ b/resources/assets/sass/form.scss
@@ -3,5 +3,5 @@
 }
 
 .input{
-    @apply  border border-gray-500 rounded py-2 px-4
+    @apply  border border-gray-500 text-black text-sm rounded py-2 px-4
 }
