--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -1,8 +1,8 @@
 @layout('layout.master')
 
 @section('content')
-    <div id='index'  class='flex flex-col h-full w-screen place-content-center '>
-        <div class="flex flex-col bg-gray-700 h-1/2 border-2 border-red-500 w-1/3 mx-auto place-content-center px-5 py-5 my-12 space-y-5 rounded-xl">
+    <div id='index' class='flex flex-col flex-grow h-full my-auto w-screen place-content-center' style="background-repeat: no-repeat; background-size: 100% 100%; background-image: url('/prison-hall.jpg')">
+        <div class="flex flex-col bg-gray-700 bg-opacity-50 h-1/2 border-2 border-black w-1/3 mx-auto place-content-center px-5 py-5 my-12 space-y-5 rounded-xl">
             <a class="flex flex-col" href="{{route('createMap')}}">
                 <button class='btn-primary bg-gray-500 hover:bg-gray-700' > create map</button>
             </a>
