--- a/resources/views/layout/master.edge
+++ b/resources/views/layout/master.edge
@@ -6,11 +6,11 @@
   {{ style('app') }}
   <link rel="icon" href="spiked-dragon-head.png" type="image/x-icon">
 </head>
-<body class="container h-screen w-screen bg-gray-400" >
-    <div class="w-screen">
+<body class="flex flex-col h-screen w-screen bg-gray-400" >
+    <div class="flex w-screen ">
         @include('layout.header')
     </div>
-    <div class="w-screen">
+    <div class="flex flex-auto w-screen overflow-y-auto">
         @!section('content')
     </div>
 
