optimization for big grids

--- a/resources/assets/sass/menu.scss
+++ b/resources/assets/sass/menu.scss
@@ -1,5 +1,5 @@
 .menu{
-    @apply flex flex-wrap flex-shrink-0 place-items-center text-white bg-opacity-50 bg-gray-700 border-2 border-black rounded py-2 px-2 mx-2 my-2;
+    @apply flex flex-shrink-0 place-items-center text-white bg-opacity-50 bg-gray-700 border-2 border-black rounded py-2 px-2 mx-2 my-2;
 }
 
 .menu-v{
