--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -3,6 +3,9 @@
 @section('content')
     <div id='index' class='flex flex-col flex-grow h-full my-auto w-screen place-content-center' style="background-repeat: no-repeat; background-size: 100% 100%; background-image: url('/prison-hall.jpg')">
         <div class="flex flex-col bg-gray-700 bg-opacity-50 h-1/2 border-2 border-black w-1/3 mx-auto place-content-center px-5 py-5 my-12 space-y-5 rounded-xl">
+            <a class="flex flex-col" href="{{route('adventure')}}">
+                <button class='btn-primary bg-gray-500 hover:bg-gray-700' > adventure time</button>
+            </a>
             <a class="flex flex-col" href="{{route('createMap')}}">
                 <button class='btn-primary bg-gray-500 hover:bg-gray-700' > create map</button>
             </a>
@@ -15,8 +18,8 @@
             <a class="flex flex-col" href="{{route('uploadImage')}}">
                 <button class='btn-primary bg-gray-500 hover:bg-gray-700' > upload image</button>
             </a>
-            <a class="flex flex-col" href="{{route('createCharacter')}}">
-                <button class='btn-primary bg-gray-500 hover:bg-gray-700' > create character</button>
+            <a class="flex flex-col" href="{{route('createClass')}}">
+                <button class='btn-primary bg-gray-500 hover:bg-gray-700' > create class</button>
             </a>
         </div>
 
