--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -21,6 +21,9 @@
             <a class="flex flex-col" href="{{route('createClass')}}">
                 <button class='btn-primary bg-gray-500 hover:bg-gray-700' > create class</button>
             </a>
+            <a class="flex flex-col" href="{{route('createStructure')}}">
+                <button class='btn-primary bg-gray-500 hover:bg-gray-700' > create structure</button>
+            </a>
         </div>
 
     </div>
