--- a/resources/assets/sass/menu.scss
+++ b/resources/assets/sass/menu.scss
@@ -3,11 +3,11 @@
 }
 
 .menu-v{
-    @apply flex-col space-y-2;
+    @apply flex flex-col space-y-2;
 }
 
 .menu-h{
-    @apply flex-row space-x-2;
+    @apply flex flex-row space-x-2;
 }
 
 .sub-menu{
