--- a/resources/views/auth/login.edge
+++ b/resources/views/auth/login.edge
@@ -1,9 +1,9 @@
 @layout('layout.master')
 
 @section("content")
-<div class="flex flex-col my-8 py-8">
+<div class="flex flex-col mx-auto my-8" >
     <h1 class="text-4xl px-4 antialiased"> Seja bem vindo </h1>
-    <div class="flex w-1/3 rounded-xl justify-center text-white mx-auto py-8 bg-gray-700 border-4 border-red-700">
+    <div class="flex  rounded-xl justify-center text-white px-6 py-8 bg-gray-700 border-4 border-red-700">
         <form method="POST" action="{{ route('login') }}">
             {{csrfField(csrfToken)}}
             <label for="email" >e-mail</label><br/>
