--- a/resources/views/auth/register.edge
+++ b/resources/views/auth/register.edge
@@ -2,9 +2,9 @@
 
 @section("content")
 
-    <div class="flex flex-col my-8 py-8">
+    <div class="flex flex-col mx-auto my-8" >
         <h1 class="text-4xl px-4 antialiased"> Seja bem vindo </h1>
-        <div class="flex w-1/3 rounded-xl justify-center text-white mx-auto py-8 bg-gray-700 border-4 border-red-700">
+        <div class="flex  rounded-xl justify-center text-white px-6 py-8 bg-gray-700 border-4 border-red-700">
             <form method="POST" action="{{ route('register') }}">
                 <label for="email" >e-mail</label><br/>
                 <input id="email" name="email" class="rounded text-black border-2 my-2 py-2 bg-blue-50" type="email"></input><br/>
